--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -14,8 +14,8 @@
 	<link href="../themes/font-end/assets/css/main.css" rel="stylesheet">
 	<link href="../themes/font-end/assets/css/responsive.css" rel="stylesheet">
     <!--[if lt IE 9]>
-    <script src="js/html5shiv.js"></script>
-    <script src="js/respond.min.js"></script>
+    <script src="../themes/font-end/assets/js/html5shiv.js"></script>
+    <script src="../themes/font-end/assets/js/respond.min.js"></script>
     <![endif]-->       
     <link rel="shortcut icon" href="images/ico/favicon.ico">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
@@ -483,10 +483,10 @@
 	
 
 
-    <script src="js/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.scrollUp.min.js"></script>
-    <script src="js/jquery.prettyPhoto.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../themes/font-end/assets/js/jquery.js"></script>
+	<script src="../themes/font-end/assets/js/bootstrap.min.js"></script>
+	<script src="../themes/font-end/assets/js/jquery.scrollUp.min.js"></script>
+    <script src="../themes/font-end/assets/js/jquery.prettyPhoto.js"></script>
+    <script src="../themes/font-end/assets/js/main.js"></script>
 </body>
 </html>
