--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -57,7 +57,7 @@
 				<div class="row">
 					<div class="col-sm-4">
 						<div class="logo pull-left">
-							<a href="index.ejs"><img src="../themes/font-end/assets/images/home/logo.png" alt="" /></a>
+							<a href="/index"><img src="../themes/font-end/assets/images/home/logo.png" alt="" /></a>
 						</div>
 						<div class="btn-group pull-right">
 							<div class="btn-group">
@@ -88,9 +88,9 @@
 							<ul class="nav navbar-nav">
 								<li><a href=""><i class="fa fa-user"></i> Account</a></li>
 								<li><a href=""><i class="fa fa-star"></i> Wishlist</a></li>
-								<li><a href="checkout.ejs" class="active"><i class="fa fa-crosshairs"></i> Checkout</a></li>
-								<li><a href="cart.ejs"><i class="fa fa-shopping-cart"></i> Cart</a></li>
-								<li><a href="login.ejs"><i class="fa fa-lock"></i> Login</a></li>
+								<li><a href="/checkout" class="active"><i class="fa fa-crosshairs"></i> Checkout</a></li>
+								<li><a href="/cart"><i class="fa fa-shopping-cart"></i> Cart</a></li>
+								<li><a href="/login"><i class="fa fa-lock"></i> Login</a></li>
 							</ul>
 						</div>
 					</div>
@@ -112,14 +112,14 @@
 						</div>
 						<div class="mainmenu pull-left">
 							<ul class="nav navbar-nav collapse navbar-collapse">
-								<li><a href="index.ejs">Home</a></li>
+								<li><a href="/index">Home</a></li>
 								<li class="dropdown"><a href="#">Shop<i class="fa fa-angle-down"></i></a>
                                     <ul role="menu" class="sub-menu">
-                                        <li><a href="shop.ejs">Products</a></li>
-										<li><a href="product-details.ejs">Product Details</a></li> 
-										<li><a href="checkout.ejs" class="active">Checkout</a></li> 
-										<li><a href="cart.ejs">Cart</a></li> 
-										<li><a href="login.ejs">Login</a></li> 
+                                        <li><a href="/shop">Products</a></li>
+										<li><a href="/prod-detail.ejs">Product Details</a></li> 
+										<li><a href="/checkout" class="active">Checkout</a></li> 
+										<li><a href="/cart">Cart</a></li> 
+										<li><a href="/login">Login</a></li> 
                                     </ul>
                                 </li> 
 								<li class="dropdown"><a href="#">Blog<i class="fa fa-angle-down"></i></a>
@@ -129,7 +129,7 @@
                                     </ul>
                                 </li> 
 								<li><a href="404.ejs">404</a></li>
-								<li><a href="contact-us.ejs">Contact</a></li>
+								<li><a href="/contact.ejs">Contact</a></li>
 							</ul>
 						</div>
 					</div>
