--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Login | E-Shopper</title>
+    <title>Login | <%=title%></title>
     <link href="../themes/font-end/assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="../themes/font-end/assets/css/font-awesome.min.css" rel="stylesheet">
     <link href="../themes/font-end/assets/css/prettyPhoto.css" rel="stylesheet">
@@ -57,7 +57,7 @@
 				<div class="row">
 					<div class="col-sm-4">
 						<div class="logo pull-left">
-							<a href="index.ejs"><img src="../themes/font-end/assets/images/home/logo.png" alt="" /></a>
+							<a href="/index"><img src="../themes/font-end/assets/images/home/logo.png" alt="" /></a>
 						</div>
 						<div class="btn-group pull-right">
 							<div class="btn-group">
@@ -88,8 +88,8 @@
 							<ul class="nav navbar-nav">
 								<li><a href=""><i class="fa fa-user"></i> Account</a></li>
 								<li><a href=""><i class="fa fa-star"></i> Wishlist</a></li>
-								<li><a href="checkout.ejs"><i class="fa fa-crosshairs"></i> Checkout</a></li>
-								<li><a href="cart.ejs"><i class="fa fa-shopping-cart"></i> Cart</a></li>
+								<li><a href="/checkout"><i class="fa fa-crosshairs"></i> Checkout</a></li>
+								<li><a href="/cart"><i class="fa fa-shopping-cart"></i> Cart</a></li>
 								<li><a href="login.ejs" class="active"><i class="fa fa-lock"></i> Login</a></li>
 							</ul>
 						</div>
@@ -112,13 +112,13 @@
 						</div>
 						<div class="mainmenu pull-left">
 							<ul class="nav navbar-nav collapse navbar-collapse">
-								<li><a href="index.ejs">Home</a></li>
+								<li><a href="/index">Home</a></li>
 								<li class="dropdown"><a href="#">Shop<i class="fa fa-angle-down"></i></a>
                                     <ul role="menu" class="sub-menu">
-                                        <li><a href="shop.ejs">Products</a></li>
-										<li><a href="product-details.ejs">Product Details</a></li>
-										<li><a href="checkout.ejs">Checkout</a></li>
-										<li><a href="cart.ejs">Cart</a></li>
+                                        <li><a href="/shop">Products</a></li>
+										<li><a href="/prod-detail.ejs">Product Details</a></li>
+										<li><a href="/checkout">Checkout</a></li>
+										<li><a href="/cart">Cart</a></li>
 										<li><a href="login.ejs" class="active">Login</a></li>
                                     </ul>
                                 </li>
@@ -129,7 +129,7 @@
                                     </ul>
                                 </li>
 								<li><a href="404.ejs">404</a></li>
-								<li><a href="contact-us.ejs">Contact</a></li>
+								<li><a href="/contact.ejs">Contact</a></li>
 							</ul>
 						</div>
 					</div>
