--- a/views/404.ejs
+++ b/views/404.ejs
@@ -16,7 +16,7 @@
     <!--[if lt IE 9]>
     <script src="../themes/font-end/assets/js/html5shiv.js"></script>
     <script src="../themes/font-end/assets/js/respond.min.js"></script>
-    <![endif]-->       
+    <![endif]-->
     <link rel="shortcut icon" href="images/ico/favicon.ico">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
@@ -27,22 +27,22 @@
 <body>
 	<div class="container text-center">
 		<div class="logo-404">
-			<a href="index.ejs"><img src="../themes/font-end/assets/images/home/logo.png" alt="" /></a>
+			<a href="/index"><img src="../themes/font-end/assets/images/home/logo.png" alt="" /></a>
 		</div>
 		<div class="content-404">
 			<img src="../themes/font-end/assets/images/404/404.png" class="img-responsive" alt="" />
 			<h1><b>OPPS!</b> We Couldn’t Find this Page</h1>
 			<p>Uh... So it looks like you brock something. The page you are looking for has up and Vanished.</p>
-			<h2><a href="index.ejs">Bring me back Home</a></h2>
+			<h2><a href="/index">Bring me back Home</a></h2>
 		</div>
 	</div>
 
-  
-    <script src="../themes/font-end/assets/js/jquery.js"></script>
+
+  <script src="../themes/font-end/assets/js/jquery.js"></script>
 	<script src="../themes/font-end/assets/js/price-range.js"></script>
-    <script src="../themes/font-end/assets/js/jquery.scrollUp.min.js"></script>
+  <script src="../themes/font-end/assets/js/jquery.scrollUp.min.js"></script>
 	<script src="../themes/font-end/assets/js/bootstrap.min.js"></script>
-    <script src="../themes/font-end/assets/js/jquery.prettyPhoto.js"></script>
-    <script src="../themes/font-end/assets/js/main.js"></script>
+  <script src="../themes/font-end/assets/js/jquery.prettyPhoto.js"></script>
+  <script src="../themes/font-end/assets/js/main.js"></script>
 </body>
 </html>
