--- a/views/layout.pug
+++ b/views/layout.pug
@@ -106,7 +106,7 @@ html(lang='en')
                       i.fa.fa-shopping-cart
                       |  Cart
                   li
-                    a(href='/login')
+                    a(href='/signin')
                       i.fa.fa-lock
                       |  Login
       // /header-middle
@@ -139,7 +139,7 @@ html(lang='en')
                       li
                         a(href='/cart') Cart
                       li
-                        a(href='/login') Login
+                        a(href='/signin') Login
                   li.dropdown
                     a(href='#')
                       | Blog
