--- a/views/index.pug
+++ b/views/index.pug
@@ -14,10 +14,13 @@ block content
                     a(data-toggle='collapse', data-parent='#accordian', href='#sportswear')
                       span.badge.pull-right
                         i.fa.fa-plus
-                      | 											Sportswear
+                      | Sportswear
                 #sportswear.panel-collapse.collapse
                   .panel-body
                     ul
+                      //- each c in categories
+                      //-   li
+                      //-     a(href="/products?c=" + c._id)= c.username
                       li
                         a(href='#') Nike
                       li
@@ -34,37 +37,20 @@ block content
                     a(data-toggle='collapse', data-parent='#accordian', href='#mens')
                       span.badge.pull-right
                         i.fa.fa-plus
-                      | 											Mens
+                      | Mens
                 #mens.panel-collapse.collapse
                   .panel-body
                     ul
-                      li
-                        a(href='#') Fendi
-                      li
-                        a(href='#') Guess
-                      li
-                        a(href='#') Valentino
-                      li
-                        a(href='#') Dior
-                      li
-                        a(href='#') Versace
-                      li
-                        a(href='#') Armani
-                      li
-                        a(href='#') Prada
-                      li
-                        a(href='#') Dolce and Gabbana
-                      li
-                        a(href='#') Chanel
-                      li
-                        a(href='#') Gucci
+                      //- each u in users
+                      //-   li
+                      //-     a(href="#")= u.username
               .panel.panel-default
                 .panel-heading
                   h4.panel-title
                     a(data-toggle='collapse', data-parent='#accordian', href='#womens')
                       span.badge.pull-right
                         i.fa.fa-plus
-                      | 											Womens
+                      | Womens
                 #womens.panel-collapse.collapse
                   .panel-body
                     ul
