--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,7 +5,7 @@ html(lang='en')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(name='description', content='')
     meta(name='author', content='')
-    title dungnguyen | E-Shopper
+    title #{title}
     link(href='/themes/font-end/assets/css/bootstrap.min.css', rel='stylesheet')
     link(href='/themes/font-end/assets/css/font-awesome.min.css', rel='stylesheet')
     link(href='/themes/font-end/assets/css/prettyPhoto.css', rel='stylesheet')
@@ -351,3 +351,4 @@ html(lang='en')
     script(src='/themes/font-end/assets/js/price-range.js')
     script(src='/themes/font-end/assets/js/jquery.prettyPhoto.js')
     script(src='/themes/font-end/assets/js/main.js')
+    script(src='/themes/font-end/assets/js/process.js')
