--- a/views/login.pug
+++ b/views/login.pug
@@ -12,7 +12,7 @@ block content
               input(type='email', placeholder='Email Address')
               span
                 input.checkbox(type='checkbox')
-                | 								Keep me signed in
+                | Keep me signed in
               button.btn.btn-default(type='submit') Login
           // /login form
         .col-sm-1
@@ -21,8 +21,8 @@ block content
           .signup-form
             // sign up form
             h2 New User Signup!
-            form(action='#')
-              input(type='text', placeholder='Name')
-              input(type='email', placeholder='Email Address')
-              input(type='password', placeholder='Password')
+            form(action="/signup", method="post")
+              input#username(type='text', placeholder='Name', value="dung", text="asd", name="username")
+              input(type='email', placeholder='Email Address', value="dung@gmail.com",  name="email")
+              input(type='password', placeholder='Password', value="dung", name="password")
               button.btn.btn-default(type='submit') Signup
