--- a/views/back-end/user.pug
+++ b/views/back-end/user.pug
@@ -6,19 +6,19 @@ block content
         .col-lg-4.col-md-5
           .card.card-user
             .image
-              img(src='assets/img/background.jpg', alt='...')
+              img(src='themes/back-end/assets/img/background.jpg', alt='...')
             .content
               .author
-                img.avatar.border-white(src='assets/img/faces/face-2.jpg', alt='...')
+                img.avatar.border-white(src='themes/back-end/assets/img/faces/face-2.jpg', alt='...')
                 h4.title
                   | Chet Faker
                   br
                   a(href='#')
                     small @chetfaker
               p.description.text-center
-                | "I like the way you work it 
+                | "I like the way you work it
                 br
-                |                                     No diggity 
+                |                                     No diggity
                 br
                 |                                     I wanna bag it up"
             hr
@@ -48,7 +48,7 @@ block content
                   .row
                     .col-xs-3
                       .avatar
-                        img.img-circle.img-no-padding.img-responsive(src='assets/img/faces/face-0.jpg', alt='Circle Image')
+                        img.img-circle.img-no-padding.img-responsive(src='themes/back-end/assets/img/faces/face-0.jpg', alt='Circle Image')
                     .col-xs-6
                       | DJ Khaled
                       br
@@ -61,7 +61,7 @@ block content
                   .row
                     .col-xs-3
                       .avatar
-                        img.img-circle.img-no-padding.img-responsive(src='assets/img/faces/face-1.jpg', alt='Circle Image')
+                        img.img-circle.img-no-padding.img-responsive(src='themes/back-end/assets/img/faces/face-1.jpg', alt='Circle Image')
                     .col-xs-6
                       | Creative Tim
                       br
@@ -74,7 +74,7 @@ block content
                   .row
                     .col-xs-3
                       .avatar
-                        img.img-circle.img-no-padding.img-responsive(src='assets/img/faces/face-3.jpg', alt='Circle Image')
+                        img.img-circle.img-no-padding.img-responsive(src='themes/back-end/assets/img/faces/face-3.jpg', alt='Circle Image')
                     .col-xs-6
                       | Flume
                       br
