--- a/views/back-end/category-mngt.pug
+++ b/views/back-end/category-mngt.pug
@@ -1,3 +1,16 @@
+//- Bootstrap core CSS
+link(href='/themes/back-end/assets/css/bootstrap.min.css', rel='stylesheet')
+//- Animation library for notifications
+link(href='/themes/back-end/assets/css/animate.min.css', rel='stylesheet')
+//- Paper Dashboard core CSS
+link(href='/themes/back-end/assets/css/paper-dashboard.css', rel='stylesheet')
+//- CSS for Demo Purpose, don't include it in your project
+link(href='themes/assets/css/demo.css', rel='stylesheet')
+//- Fonts and icons
+link(href='http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css', rel='stylesheet')
+link(href='https://fonts.googleapis.com/css?family=Muli:400,300', rel='stylesheet', type='text/css')
+
+
 h2 Create New Category
 form(action="/createCate" method="post")
   input(type='text', placeholder='ID', name="cateid")
@@ -7,9 +20,15 @@ form(action="/createCate" method="post")
   p -------------------------------------------------------------------------------------------------
   ul
     p(style='font-weight: bold') ---- List Category ----
-    table(style='border: 1px')
-      each cItem in categories
-        tr 
-          td(style='width: 150px')= cItem.cateId
-          td(style='width: 150px')= cItem.cateNm
-          td(style='width: 150px')= cItem.catePrnt
+    .content.table-responsive.table-full-width
+      table.table.table-striped(style="width: 50%")
+        thead
+          th ID
+          th Name
+          th Parent
+        tbody
+        each cItem in categories
+          tr
+            td(style='width: 120')= cItem.cateId
+            td(style='width: 120')= cItem.cateNm
+            td(style='width: 120')= cItem.catePrnt
