--- a/views/back-end/layout.pug
+++ b/views/back-end/layout.pug
@@ -8,15 +8,15 @@ html(lang='en')
     title Paper Dashboard by Creative Tim
     meta(content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0', name='viewport')
     meta(name='viewport', content='width=device-width')
-    // Bootstrap core CSS
+    //- Bootstrap core CSS
     link(href='/themes/back-end/assets/css/bootstrap.min.css', rel='stylesheet')
-    // Animation library for notifications
+    //- Animation library for notifications
     link(href='/themes/back-end/assets/css/animate.min.css', rel='stylesheet')
-    // Paper Dashboard core CSS
+    //- Paper Dashboard core CSS
     link(href='/themes/back-end/assets/css/paper-dashboard.css', rel='stylesheet')
-    // CSS for Demo Purpose, don't include it in your project
+    //- CSS for Demo Purpose, don't include it in your project
     link(href='themes/assets/css/demo.css', rel='stylesheet')
-    // Fonts and icons
+    //- Fonts and icons
     link(href='http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css', rel='stylesheet')
     link(href='https://fonts.googleapis.com/css?family=Muli:400,300', rel='stylesheet', type='text/css')
     link(href='/themes/back-end/assets/css/themify-icons.css', rel='stylesheet')
@@ -104,10 +104,10 @@ html(lang='en')
                   a(href='#')
                     i.ti-settings
                     p Settings
-        // Body
+        //- Body
         .container
           block content
-        // Body
+        //- Body
 
         footer.footer
           .container-fluid
@@ -123,27 +123,27 @@ html(lang='en')
                   a(href='http://www.google.com')
                     | Licenses
             .copyright.pull-right
-              | © 
+              | ©
               script.
                 document.write(new Date().getFullYear())
-              | , made with 
+              | , made with
               i.fa.fa-heart.heart
-              |  by 
+              |  by
               a(href='http://www.google.com') Creative Tim
-  // Core JS Files
+  //- Core JS Files
   script(src='/themes/back-end/assets/js/jquery-1.10.2.js', type='text/javascript')
   script(src='/themes/back-end/assets/js/bootstrap.min.js', type='text/javascript')
-  // Checkbox, Radio & Switch Plugins
+  //- Checkbox, Radio & Switch Plugins
   script(src='/themes/back-end/assets/js/bootstrap-checkbox-radio.js')
-  // Charts Plugin
+  //- Charts Plugin
   script(src='/themes/back-end/assets/js/chartist.min.js')
-  // Notifications Plugin
+  //- Notifications Plugin
   script(src='/themes/back-end/assets/js/bootstrap-notify.js')
-  // Google Maps Plugin
+  //- Google Maps Plugin
   script(type='text/javascript', src='https://maps.googleapis.com/maps/api/js')
-  // Paper Dashboard Core javascript and methods for Demo purpose
+  //- Paper Dashboard Core javascript and methods for Demo purpose
   script(src='/themes/back-end/assets/js/paper-dashboard.js')
-  // Paper Dashboard DEMO methods, don't include it in your project!
+  //- Paper Dashboard DEMO methods, don't include it in your project!
   script(src='/themes/back-end/assets/js/demo.js')
   script(type='text/javascript').
     $(document).ready(function(){
