--- a/views/backend/index.html
+++ b/views/backend/index.html
@@ -512,6 +512,20 @@
             </li>
             <li class="site-menu-item has-sub">
               <a href="javascript:void(0)">
+                <i class="site-menu-icon md-widgets" aria-hidden="true"></i>
+                <span class="site-menu-title">Users Management</span>
+                <span class="site-menu-arrow"></span>
+              </a>
+              <ul class="site-menu-sub">
+                <li class="site-menu-item">
+                  <a class="animsition-link" href="widgets/statistics.html">
+                    <span class="site-menu-title">Statistics Widgets</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="site-menu-item has-sub">
+              <a href="javascript:void(0)">
                 <i class="site-menu-icon md-view-compact" aria-hidden="true"></i>
                 <span class="site-menu-title">Layouts</span>
                 <span class="site-menu-arrow"></span>
