--- a/views/backend/authenticate/login.html
+++ b/views/backend/authenticate/login.html
@@ -51,11 +51,7 @@
         <h2 class="brand-text">E-Shopping</h2>
       </div>
       <p>Sign into your pages account</p>
-      <form method="post" action="login.html">
-        <div class="form-group form-material floating" data-plugin="formMaterial">
-          <input type="text" class="form-control empty" id="inputName" name="name" required>
-          <label class="floating-label" for="inputName">Name</label>
-        </div>
+      <form method="post" action="/signin">
         <div class="form-group form-material floating" data-plugin="formMaterial">
           <input type="email" class="form-control empty" id="inputEmail" name="email" required>
           <label class="floating-label" for="inputEmail">Email</label>
