--- a/views/backend/index.html
+++ b/views/backend/index.html
@@ -59,7 +59,7 @@
       </button>
       <div class="navbar-brand navbar-brand-center site-gridmenu-toggle" data-toggle="gridmenu">
         <img class="navbar-brand-logo" src="themes/backend/assets/images/logo.png" title="Remark">
-        <span class="navbar-brand-text hidden-xs-down"> Remark</span>
+        <span class="navbar-brand-text hidden-xs-down">Hoàng Dũng</span>
       </div>
       <button type="button" class="navbar-toggler collapsed" data-target="#site-navbar-search"
       data-toggle="collapse">
@@ -292,7 +292,7 @@
               <a class="dropdown-item" href="javascript:void(0)" role="menuitem"><i class="icon md-card" aria-hidden="true"></i> Billing</a>
               <a class="dropdown-item" href="javascript:void(0)" role="menuitem"><i class="icon md-settings" aria-hidden="true"></i> Settings</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="javascript:void(0)" role="menuitem"><i class="icon md-power" aria-hidden="true"></i> Logout</a>
+              <a class="dropdown-item" href="/signout" role="menuitem"><i class="icon md-power" aria-hidden="true"></i> Logout</a>
             </div>
           </li>
           <li class="nav-item dropdown">
