--- a/views/backend/authenticate/register.html
+++ b/views/backend/authenticate/register.html
@@ -51,21 +51,21 @@
         <h2 class="brand-text">E-Shopping</h2>
       </div>
       <p>Sign up to find interesting thing</p>
-      <form method="post" role="form" autocomplete="off">
+      <form method="post" role="form" autocomplete="off" action="/signup">
         <div class="form-group form-material floating" data-plugin="formMaterial">
-          <input type="text" class="form-control" id="inputName" name="name">
+          <input type="text" class="form-control" id="inputName" name="username" required>
           <label class="floating-label" for="inputName">Name</label>
         </div>
         <div class="form-group form-material floating" data-plugin="formMaterial">
-          <input type="email" class="form-control" id="inputEmail" name="email">
+          <input type="email" class="form-control" id="inputEmail" name="email" required>
           <label class="floating-label" for="inputEmail">Email</label>
         </div>
         <div class="form-group form-material floating" data-plugin="formMaterial">
-          <input type="password" class="form-control" id="inputPassword" name="password">
+          <input type="password" class="form-control" id="inputPassword" name="password" required>
           <label class="floating-label" for="inputPassword">Password</label>
         </div>
         <div class="form-group form-material floating" data-plugin="formMaterial">
-          <input type="password" class="form-control" id="inputPasswordCheck" name="passwordCheck">
+          <input type="password" class="form-control" id="inputPasswordCheck" name="passwordCheck" required>
           <label class="floating-label" for="inputPasswordCheck">Retype Password</label>
         </div>
         <button type="submit" class="btn btn-primary btn-block">Register</button>
