--- a/views/backend/layout-backend.pug
+++ b/views/backend/layout-backend.pug
@@ -25,6 +25,9 @@ html.no-js.css-menubar(lang='en')
     link(rel='stylesheet', href='vendor/jvectormap/jquery-jvectormap.css')
     link(rel='stylesheet', href='vendor/chartist-plugin-tooltip/chartist-plugin-tooltip.css')
     link(rel='stylesheet', href='themes/backend/assets/examples/css/dashboard/v1.css')
+    link(rel='stylesheet', href='themes/backend/assets/examples/css/tables/jsgrid.css')
+    link(rel='stylesheet', href='vendor/jsgrid/jsgrid.css')
+
     // Fonts
     link(rel='stylesheet', href='assets-global/fonts/material-design/material-design.min.css')
     link(rel='stylesheet', href='assets-global/fonts/brand-icons/brand-icons.min.css')
@@ -474,6 +477,9 @@ html.no-js.css-menubar(lang='en')
     script(src='vendor/jvectormap/maps/jquery-jvectormap-world-mill-en.js')
     script(src='vendor/matchheight/jquery.matchHeight-min.js')
     script(src='vendor/peity/jquery.peity.min.js')
+    script(src='vendor/jsgrid/jsgrid.js')
+    script(src='vendor/jquery-ui/jquery-ui.min.js')
+
     // Scripts
     script(src='assets-global/js/State.js')
     script(src='assets-global/js/Component.js')
@@ -498,3 +504,5 @@ html.no-js.css-menubar(lang='en')
     script(src='assets-global/js/Plugin/jvectormap.js')
     script(src='assets-global/js/Plugin/peity.js')
     script(src='themes/backend/assets/examples/js/dashboard/v1.js')
+    script(src='themes/backend/assets/examples/js/tables/jsgrid-db.js')
+    script(src='themes/backend/assets/examples/js/tables/jsgrid.js')
