--- a/views/backend/layout-backend.pug
+++ b/views/backend/layout-backend.pug
@@ -39,6 +39,7 @@ html.no-js.css-menubar(lang='en')
       script(src='vendor/respond/respond.min.js')
     // Scripts
     script(src='vendor/breakpoints/breakpoints.js')
+    script(src='vendor/jquery/jquery.js')
     script.
       Breakpoints();
   body.animsition
@@ -455,9 +456,9 @@ html.no-js.css-menubar(lang='en')
         i.red-600.icon.md-favorite(style='margin-left: 5px')
         |  by
         a(href='http://themeforest.net/user/amazingSurge') amazingSurge
+
     // Core
     script(src='vendor/babel-external-helpers/babel-external-helpers.js')
-    script(src='vendor/jquery/jquery.js')
     script(src='vendor/tether/tether.js')
     script(src='vendor/bootstrap/bootstrap.js')
     script(src='vendor/animsition/animsition.js')
@@ -477,7 +478,6 @@ html.no-js.css-menubar(lang='en')
     script(src='vendor/jvectormap/maps/jquery-jvectormap-world-mill-en.js')
     script(src='vendor/matchheight/jquery.matchHeight-min.js')
     script(src='vendor/peity/jquery.peity.min.js')
-    script(src='vendor/jsgrid/jsgrid.js')
     script(src='vendor/jquery-ui/jquery-ui.min.js')
 
     // Scripts
@@ -504,5 +504,5 @@ html.no-js.css-menubar(lang='en')
     script(src='assets-global/js/Plugin/jvectormap.js')
     script(src='assets-global/js/Plugin/peity.js')
     script(src='themes/backend/assets/examples/js/dashboard/v1.js')
-    script(src='themes/backend/assets/examples/js/tables/jsgrid-db.js')
-    script(src='themes/backend/assets/examples/js/tables/jsgrid.js')
+
+block scripts
