--- a/views/backend/management/categories.pug
+++ b/views/backend/management/categories.pug
@@ -4,16 +4,30 @@ block content
     .page-header
     .page-content.container-fluid
       .row
-        .col-xxl-12
+        .col-xxl-6
           // Panel Basic
           .panel
             header.panel-heading
               h3.panel-title Categires List
             .panel-body
-              #exampleBasic
-
-  link(rel='stylesheet', href='themes/backend/assets/examples/css/tables/jsgrid.css');
-  link(rel='stylesheet', href='vendor/jsgrid/jsgrid.css');
-  script(src='themes/backend/assets/examples/js/tables/jsgrid-db.js');
-  script(src='themes/backend/assets/examples/js/tables/jsgrid.js');
-  script(src='vendor/jsgrid/jsgrid.js');
+              #cateTable
+//- Script
+block scripts
+  script(src='vendor/datatables.net/jquery.dataTables.js')
+  script(src='vendor/datatables.net-bs4/dataTables.bootstrap4.js')
+  script(src='vendor/datatables.net-fixedheader/dataTables.fixedHeader.js')
+  script(src='vendor/datatables.net-fixedcolumns/dataTables.fixedColumns.js')
+  script(src='vendor/datatables.net-rowgroup/dataTables.rowGroup.js')
+  script(src='vendor/datatables.net-scroller/dataTables.scroller.js')
+  script(src='vendor/datatables.net-select-bs4/dataTables.select.js')
+  script(src='vendor/datatables.net-responsive/dataTables.responsive.js')
+  script(src='vendor/datatables.net-responsive-bs4/responsive.bootstrap4.js')
+  script(src='vendor/datatables.net-buttons/dataTables.buttons.js')
+  script(src='vendor/datatables.net-buttons/buttons.html5.js')
+  script(src='vendor/datatables.net-buttons/buttons.flash.js')
+  script(src='vendor/datatables.net-buttons/buttons.print.js')
+  script(src='vendor/datatables.net-buttons/buttons.colVis.js')
+  script(src='vendor/datatables.net-buttons-bs4/buttons.bootstrap4.js')
+  script(src='assets-global/js/Plugin/datatables.js')
+  script(src='/themes/backend/assets/examples/js/tables/datatable.js')
+  script(src='/themes/backend/components/data-table-category.js')
