--- a/views/backend/layout-backend.pug
+++ b/views/backend/layout-backend.pug
@@ -25,6 +25,7 @@ html.no-js.css-menubar(lang='en')
     link(rel='stylesheet', href='vendor/jvectormap/jquery-jvectormap.css')
     link(rel='stylesheet', href='vendor/chartist-plugin-tooltip/chartist-plugin-tooltip.css')
     link(rel='stylesheet', href='themes/backend/assets/examples/css/dashboard/v1.css')
+
     link(rel='stylesheet', href='themes/backend/assets/examples/css/tables/jsgrid.css')
     link(rel='stylesheet', href='vendor/jsgrid/jsgrid.css')
 
@@ -59,7 +60,7 @@ html.no-js.css-menubar(lang='en')
           i.icon.md-more(aria-hidden='true')
         .navbar-brand.navbar-brand-center.site-gridmenu-toggle(data-toggle='gridmenu')
           img.navbar-brand-logo(src='themes/backend/assets/images/logo.png', title='Remark')
-          span.navbar-brand-text.hidden-xs-down Back End
+          span.navbar-brand-text.hidden-xs-down #template
         button.navbar-toggler.collapsed(type='button', data-target='#site-navbar-search', data-toggle='collapse')
           span.sr-only Toggle Search
           i.icon.md-search(aria-hidden='true')
@@ -472,7 +473,7 @@ html.no-js.css-menubar(lang='en')
     script(src='vendor/intro-js/intro.js')
     script(src='vendor/screenfull/screenfull.js')
     script(src='vendor/slidepanel/jquery-slidePanel.js')
-    script(src='vendor/chartist/chartist.min.js')
+    //- script(src='vendor/chartist/chartist.min.js')
     script(src='vendor/chartist-plugin-tooltip/chartist-plugin-tooltip.min.js')
     script(src='vendor/jvectormap/jquery-jvectormap.min.js')
     script(src='vendor/jvectormap/maps/jquery-jvectormap-world-mill-en.js')
