--- a/views/backend/layout-backend.pug
+++ b/views/backend/layout-backend.pug
@@ -473,7 +473,7 @@ html.no-js.css-menubar(lang='en')
     script(src='vendor/intro-js/intro.js')
     script(src='vendor/screenfull/screenfull.js')
     script(src='vendor/slidepanel/jquery-slidePanel.js')
-    //- script(src='vendor/chartist/chartist.min.js')
+    script(src='vendor/chartist/chartist.min.js')
     script(src='vendor/chartist-plugin-tooltip/chartist-plugin-tooltip.min.js')
     script(src='vendor/jvectormap/jquery-jvectormap.min.js')
     script(src='vendor/jvectormap/maps/jquery-jvectormap-world-mill-en.js')
