--- a/views/backend/management/categories.pug
+++ b/views/backend/management/categories.pug
@@ -15,7 +15,7 @@ block content
                     input.views(type='checkbox', value='heading', checked='')
                     |  Heading
                   label.btn.btn-info.active
-                    input.views(type='checkbox', value='filtering', checked='')
+                    input.views(type='checkbox', value='filtering')
                     |  Filtering
                   label.btn.btn-info
                     input.views(type='checkbox', value='inserting')
