--- a/views/backend/layout-backend.pug
+++ b/views/backend/layout-backend.pug
@@ -460,6 +460,7 @@ html.no-js.css-menubar(lang='en')
 
     // Core
     script(src='vendor/babel-external-helpers/babel-external-helpers.js')
+    script(src='https://unpkg.com/axios/dist/axios.min.js')
     script(src='vendor/tether/tether.js')
     script(src='vendor/bootstrap/bootstrap.js')
     script(src='vendor/animsition/animsition.js')
