--- a/views/backend/system/footer.pug
+++ b/views/backend/system/footer.pug
@@ -15,3 +15,6 @@ script(src='themes/backend/assets/plugins/sticky-kit-master/dist/sticky-kit.min.
 script(src='themes/backend/assets/js/custom.min.js')
 
 script(src='themes/backend/assets/plugins/styleswitcher/jQuery.style.switcher.js')
+//- Sweet-Alert
+script(src='themes/backend/assets/plugins/sweetalert/sweetalert.min.js')
+script(src='themes/backend/assets/plugins/sweetalert/jquery.sweet-alert.custom.js')
