--- a/views/backend/system/footer.pug
+++ b/views/backend/system/footer.pug
@@ -18,3 +18,6 @@ script(src='themes/backend/assets/plugins/styleswitcher/jQuery.style.switcher.js
 //- Sweet-Alert
 script(src='themes/backend/assets/plugins/sweetalert/sweetalert.min.js')
 script(src='themes/backend/assets/plugins/sweetalert/jquery.sweet-alert.custom.js')
+
+//- Vue JS Lib
+script(src='https://unpkg.com/vue')
